# tsr-vpad-2025-1

./: LICENSE  README.md
demo_pkg/: package.xml  setup.py
demo_pkg/config/: params.yaml  params_2.yaml
demo_pkg/demo_pkg/: MyNodo.py  MyParameters.py  MySubscriptor.py
my_interfase/: CMakeLists.txt  package.xml
my_interfase/msg/: Myposition.msg  TargetPosition.msg
